@@ -1,5 +1,8 @@
 2004-11-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* tests/testgtk.c: Apply a patch by Soeren Sandmann to 
+	test long statusbar texts.
+
 	* gtk/gtk.symbols: Add new symbols.
 
 	Avoid resizing GtkStatusbar if the text of the label 
